fix header spacing

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -20,8 +20,6 @@ footer {
 }
 header {
   margin-top: 25px;
-  margin-left: 30px;
-  margin-right: 30px;
 }
 nav {
   text-align: right;
